select img, setup local DB, install retrofit2.

--- a/app/src/main/res/layout/activity_complete_register.xml
+++ b/app/src/main/res/layout/activity_complete_register.xml
@@ -33,7 +33,7 @@
 
 
     <Button
-        android:id="@+id/signin_btn"
+        android:id="@+id/btn_completereg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/set200dp"
