--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -71,9 +71,9 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/set16dp"
+        android:layout_marginStart="@dimen/set20dp"
         android:layout_marginTop="@dimen/set8dp"
-        android:text="@string/yourname"
+        android:text="@string/email"
 
         android:textSize="@dimen/set15sp"
         android:textStyle="bold"
@@ -89,7 +89,7 @@
         android:layout_marginTop="@dimen/set8dp"
         android:layout_marginEnd="@dimen/set16dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:labelFor="@id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,8 +99,8 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/set16dp"
-        android:layout_marginTop="@dimen/set80dp"
+        android:layout_marginStart="@dimen/set20dp"
+        android:layout_marginTop="@dimen/set90dp"
         android:text="@string/password"
         android:textColor="@color/light"
         android:textSize="@dimen/set15sp"
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/set16dp"
@@ -133,10 +133,10 @@
         android:textColor="@color/light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
 
     <Button
-        android:id="@+id/signin_btn"
+        android:id="@+id/btn_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/set200dp"
@@ -163,7 +163,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btn_signup"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin_btn"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
         app:layout_constraintHorizontal_chainStyle="packed"/>
 
     <TextView
@@ -178,6 +178,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/signin_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
