--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -70,8 +70,8 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/set16dp"
-        android:layout_marginTop="@dimen/set80dp"
+        android:layout_marginStart="@dimen/set20dp"
+        android:layout_marginTop="@dimen/set90dp"
         android:text="@string/email"
         android:textColor="@color/light"
         android:textSize="@dimen/set15sp"
@@ -80,7 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/set16dp"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/signin_btn"
+        android:id="@+id/btn_forgotpass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/set200dp"
