--- a/app/src/main/res/layout/activity_register02.xml
+++ b/app/src/main/res/layout/activity_register02.xml
@@ -69,8 +69,8 @@
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/set16dp"
-        android:layout_marginTop="@dimen/set80dp"
+        android:layout_marginStart="@dimen/set20dp"
+
         android:text="@string/email"
         android:textColor="@color/light"
         android:textSize="@dimen/set15sp"
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/set16dp"
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/signin_btn"
+        android:id="@+id/btn_conr2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/set200dp"
@@ -120,7 +120,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin_btn"
+        app:layout_constraintTop_toBottomOf="@+id/btn_conr2"
         app:layout_constraintHorizontal_chainStyle="packed"/>
 
     <TextView
@@ -135,5 +135,16 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/signin_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_conr2" />
+
+    <ImageView
+        android:id="@+id/imageUpload"
+        android:layout_width="@dimen/set120dp"
+        android:layout_height="@dimen/set120dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/btn_conr2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
+        app:srcCompat="@drawable/photo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
