--- a/app/src/main/res/layout/activity_verification_screen.xml
+++ b/app/src/main/res/layout/activity_verification_screen.xml
@@ -109,7 +109,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstPinView" />
     <Button
-        android:id="@+id/signin_btn"
+        android:id="@+id/btn_verification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/set200dp"
